# Fast-Quick-hull

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
.github/workflows/: runTests.yml
Lib/: CMakeLists.txt
Lib/QHull/: CMakeLists.txt
Lib/QHull/header/: Coordinate.h  FastQuickHull.h
Lib/QHull/src/: DistanceMapper.cpp  DistanceMapper.h  DistanceMapperPool.cpp  DistanceMapperPool.h  FastQuickHull.cpp  Hull.cpp  Hull.h
Result_visualization/: Log_visualizator.html
Result_visualization/src/: Plot.js  webgl-utils.js
Sample_02/: Main_02.cpp
Sample_02/Animals_stl/: Hyppo.stl
Samples/: CMakeLists.txt  Plotter.py  ReadMe.cpp  STL.cpp  Sample01.cpp  Sample02.cpp
Samples/Animals/: Giraffe.stl
Samples/src/: ImporterSTL.cpp  ImporterSTL.h  Logger.cpp  Logger.h
content/: Makefile
content/Result_visualization/: Log
content/Result_visualization/src/: Log_importer.js
content/Sample_01/: Main_01.cpp
content/Sample_02/: Main_02.cpp
content/Sample_02/Animals_stl/: Dolphin.stl  Giraffe.stl  Snake.stl
content/src/: FastQHull.h  Hull.h  Log_utils.h  Vector3d_basic.h
doc/: Fast_QHull.tex  doc_gen.bat
doc/image/: 4000_vertex_time.eps  400_vertex_time.eps  convex_hull.pdf_tex  convexity.pdf_tex  facet_distance.pdf_tex  hull_update.pdf_tex  mesh_a.pdf_tex  mesh_b.pdf_tex  tetraedron.pdf_tex
samples/: CMakeLists.txt  Plotter.py  PlotterOld.py  ReadMe.cpp  Sample01.cpp  Sample02.cpp
samples/utils/: ImporterSTL.cpp  ImporterSTL.h  Logger.cpp  Logger.h
src/: CMakeLists.txt  FastQHull.h  STL.h  Vector3d_basic.h
src/header/QuickHull/: Error.h  FastQuickHull.h  PointCloud.h
src/src/: Definitions.h  DistanceMapper.cpp  DistanceMapper.h  DistanceMapperPool.h  FastQuickHull.cpp  PointCloud.cpp  PointCloud.h
tests/: Animals.cpp  CMakeLists.txt  Clouds.cpp  MTEfficiency.cpp  Tests.cpp
utils/: CMakeLists.txt  Utils.cpp  Utils.h
utils/Animals/: Eagle.stl
